Tweak padding and margin to fix spacing

--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@ header, footer {
     background-color: #1F2937;
 }
 
-header, .signup-container, .info-container, .signup-container, .quote-container {
+header, .signup-container, .signup-container, .quote-container {
     padding: 0 300px;
+}
+
+.signup-container, .info-container, .quote-container, .hero-image-container {
+    height: 300px;
 }
 
 h2, p {
@@ -84,7 +88,7 @@ h2, p {
     flex-direction: column;
     text-align: center;
     flex: 1;
-    padding-top: 20px;
+    padding: 50px 300px;
     gap: 20px;  
 }
 
@@ -115,8 +119,8 @@ h2, p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     flex: 1;
+    align-items: center;
     background-color: #e5e7eb;
     padding: 50px 300px; 
 }
@@ -139,7 +143,7 @@ h2, p {
     justify-content: center;
     align-items: center;
     background-color: #3882f6; 
-    margin: 50px 300px;
+    margin: 60px 300px;
     padding: 24px 90px;
     border-radius: 5px; 
     color: white;  
